--- a/src/bib/mybib.bib
+++ b/src/bib/mybib.bib
@@ -1,79 +1,99 @@
-@book{Wettl04,
-  author    = {Ferenc Wettl and Gyula Mayer and Péter Szabó},
-  publisher = {Panem Könyvkiadó},
-  title     = {\LaTeX~kézikönyv},
-  year      = {2004},
+@Misc{LieberLieber2024,
+  author  = {{LieberLieber Gmbh.}},
+  date    = {2024-10-26},
+  editor  = {{LieberLieber Gmbh.}},
+  title   = {{Lemon tree}},
+  url     = {https://www.lieberlieber.com/lemontree/en/product/},
+  urldate = {2024-10-26},
 }
 
-@article{Candy86,
-  author       = {James C. Candy},
-  journaltitle = {{IEEE} Trans.\ on Communications},
-  month        = {01},
-  note         = {\doi{10.1109/TCOM.1986.1096432}},
-  number       = {1},
-  pages        = {72--76},
-  title        = {Decimation for Sigma Delta Modulation},
-  volume       = {34},
-  year         = {1986},
+@Misc{Git2024,
+  author  = {Git},
+  date    = {2024-10-26},
+  editor  = {Git},
+  title   = {The advantages of Git},
+  url     = {https://git-scm.com/about/branching-and-merging},
+  urldate = {2024-10-26},
 }
 
-@inproceedings{Lee87,
-  author    = {Wai L. Lee and Charles G. Sodini},
-  booktitle = {Proc.\ of the IEEE International Symposium on Circuits and Systems},
-  location  = {Philadelphia, PA, USA},
-  month     = {05~4--7},
-  pages     = {459--462},
-  title     = {A Topology for Higher Order Interpolative Coders},
-  vol       = {2},
-  year      = {1987},
+@Misc{Arinane5_1996,
+  author  = {{Inquiry Board}},
+  date    = {1996-07-19},
+  editor  = {{Prof. J. L. LIONS}},
+  title   = {{ARIANE 5 Flight 501 Failure}},
+  url     = {http://sunnyday.mit.edu/nasa-class/Ariane5-report.html},
+  urldate = {2024-10-26},
 }
 
-@thesis{KissPhD,
-  author      = {Peter Kiss},
-  institution = {Technical University of Timi\c{s}oara, Romania},
-  month       = {04},
-  title       = {Adaptive Digital Compensation of Analog Circuit Imperfections for Cascaded Delta-Sigma Analog-to-Digital Converters},
-  type        = {phdthesis},
-  year        = {2000},
+@Misc{MCO2009,
+  author  = {{NASA Safety Center: System faliure case studies}},
+  date    = {2009-08-01},
+  editor  = {{Steve Lilley}},
+  title   = {{Lost in translation}},
+  url     = {https://sma.nasa.gov/docs/default-source/safety-messages/safetymessage-2009-08-01-themarsclimateorbitermishap.pdf?sfvrsn=eaa1ef8_4},
+  urldate = {2024-10-26},
 }
 
-@manual{Schreier00,
-  author       = {Richard Schreier},
-  month        = {01},
-  note         = {\url{http://www.mathworks.com/matlabcentral/fileexchange/}},
-  organization = {Oregon State University},
-  title        = {The Delta-Sigma Toolbox v5.2},
-  year         = {2000},
+@Misc{Fish2023,
+  author  = {Garron Fish},
+  date    = {2023-04-23},
+  editor  = {Garron Fish},
+  title   = {Using physical connectors with an FMU},
+  url     = {https://www.claytex.com/tech-blog/using-physical-connectors-with-an-fmu/},
+  urldate = {2024-10-26},
 }
 
-@misc{DipPortal,
-  author       = {{Budapesti Műszaki és Gazdaságtudományi Egyetem Villamosmérnöki és Informatikai Kar}},
-  howpublished = {\url{http://diplomaterv.vik.bme.hu/}},
-  title        = {Diplomaterv portál (2011. február 26.)},
+@Article{Hirano_2015,
+  author     = {Hirano, Yutaka and Shimada, Satoshi and Teraoka, Yoichi and Seya, Osamu and Ohsumi, Yuji and Murakami, Shintaroh and Hirono, Tomohide and Sekisue, Takayuki},
+  date       = {2015-09},
+  title      = {Initiatives for acausal model connection using FMI in JSAE (Society of Automotive Engineers of Japan)},
+  doi        = {10.3384/ecp15118795},
+  issn       = {1650-3686},
+  pages      = {795--801},
+  series     = {Modelica},
+  volume     = {118},
+  booktitle  = {Proceedings of the 11th International Modelica Conference, Versailles, France, September 21-23, 2015},
+  collection = {Modelica},
+  publisher  = {Linköping University Electronic Press},
 }
 
-@incollection{Mkrtychev:1997,
-  author    = {Mkrtychev, Alexey},
-  booktitle = {Logical Foundations of Computer Science},
-  doi       = {10.1007/3-540-63045-7_27},
-  editor    = {Adian, Sergei and Nerode, Anil},
-  isbn      = {978-3-540-63045-6},
-  pages     = {266-275},
-  publisher = {Springer Berlin Heidelberg},
-  series    = {Lecture Notes in Computer Science},
-  title     = {Models for the logic of proofs},
-  url       = {http://dx.doi.org/10.1007/3-540-63045-7_27},
-  volume    = {1234},
-  year      = {1997},
+@Book{Weilkiens2020,
+  author    = {Weilkiens, Tim},
+  date      = {2020},
+  title     = {SYSMOD - the systems modeling toolbox},
+  edition   = {3rd edition, version 4.2},
+  isbn      = {9783981852981},
+  location  = {[Fredesdorf]},
+  pagetotal = {361},
+  publisher = {MBSE4U},
+  series    = {MBSE4U booklet series},
+  subtitle  = {Pragmatic MBSE with SysML},
+  ppn_gvk   = {1726408175},
 }
 
-@report{Jeney,
-  author      = {Jeney, Gábor},
-  institution = {Budapesti Műszaki és Gazdaságtudományi Egyetem, Híradástechnikai Tanszék},
-  location    = {Budapest},
-  note        = {\url{http://www.mcl.hu/~jeneyg/kinezet.pdf}},
-  title       = {Hogyan néz ki egy igényes dokumentum? {N}éhány szóban az alapvető tipográfiai szabályokról},
-  type        = {techreport},
-  year        = {2014},
+@Misc{Capella2024,
+  author  = {Capella},
+  date    = {2024-10-28},
+  title   = {Arcadia method at a glance!},
+  url     = {https://mbse-capella.org/arcadia.html},
+  urldate = {2024-10-28},
 }
 
+@Misc{autoEEsystemEngineer2024,
+  author  = {autoEEsystemEngineer},
+  date    = {2024-06-27},
+  editor  = {{Auto EE Sys Engineer`s Blog}},
+  title   = {{OOSEM (Object-Oriented Systems Engineering Methodology)}},
+  url     = {https://www.autosyseng.com/oosem/},
+  urldate = {2024-10-28},
+}
+
+@Misc{IntelCorporation2014,
+  author  = {{Intel Corporation}},
+  date    = {2014-12-31},
+  title   = {Intel® CoFluent™Methodology for SysML},
+  url     = {https://www.intel.com/content/dam/www/public/us/en/documents/white-papers/cofluent-methodology-for-sysml-white-paper.pdf},
+  urldate = {2024-10-28},
+}
+
+@Comment{jabref-meta: databaseType:biblatex;}
