--- a/src/include/ownContent/konkluzio.tex
+++ b/src/include/ownContent/konkluzio.tex
@@ -1,5 +1,14 @@
 \chapter{Konklúzió és további munka}
 
 \section{Összefoglalás}
+A dolgozatban leírt munka során először összegyűjtöttem a modellalapú rendszertervezés és a szimulációs technológiák külön-külön illetve együttes alkalmazásának előnyeit.
+Ezután Megvizsgáltam egy, a fenti technikákat integráló SysML v2 alapú tervezési módszertan által teljesítendő követelményeket, javaslatot tettem több különböző implementációs irányra, majd kiértékeltem ezeket.
+Az eredményeket felhasználva kidolgoztam és egy esettanulmányon keresztül demonstráltam egy új, a fentieknek megfelelő tervezési módszertant, ami számos az integrációból fakadó előnnyel jár, valamint alapot biztosít továbbiak elérésére, ha a hozzájuk szükséges fejlesztőeszközök elkészülnek.
+A fejlesztés során feltárásra került, hogy a javasolt előnyök némelyike külön eszközöket igényel, amelyek csak a fejlesztési folyamatban igényelnek helyet a használatukba, magától a módszertantól függetlenek.
+Ezek esetében megvizsgáltam, hogy használhatóak-e ezek a technikák, melynek során nem találtam kizáró okot a módszerek együttes használatára.
 
 \section{További kutatási és fejlesztési lehetőségek}
+Ezek alapján konzulensemmel fel is vettük a kapcsolatot az eszközt fejlesztő NIST-tel és megkezdtük az együttműködést a két eszköz összekapcsolása érdekében.
+Jelen dolgozat elsődlegesen a validációs technológiák közül a szimulációk integrálásával foglalkozott, mert ezek igényelnek külön környezetekben készített és futtatott modelleket, azonban a jövőben szeretnék több más V\&V technikát is integrálni a módszertanba és ezek függvényében bővíteni a bemutatott esettanulmányt.
+A kódgenerálás kapcsán felmerült, hogy ez az elem elengedhetetlen ahhoz, hogy a módszertan megfeleljen eredeti rendeltetésének, és bemutatásra került a fejlesztés alatt álló SysPhS eszköz is, amely alkalmazásával ez a feladat megoldhat gyorsabban megoldható, mint saját eszköz fejlesztésével.
+Az esettanulmány kidolgozása folyamán a módszertanban azonosítottam több általános mintát, melyeknek egy SysML v2 nyelvi kiterjesztésben való összegyűjtése tovább egyszerűsítené annak használatát, amely előnyös lenne a módszer elterjesztésének esetén. Természetesen a nyelvi kiterjesztés elkészültével újra frissíteném az esettanulmányt, hogy használható legyen a teljesen kiforrott módszertan bemutatására, valamint referenciamodellnek.
