--- a/src/include/preamble.tex
+++ b/src/include/preamble.tex
@@ -8,6 +8,7 @@
 
 \pagestyle{plain}
 \geometry{inner=35mm, outer=25mm, top=28mm, bottom=25mm}
+%\geometry{inner=15mm, outer=15mm, top=15mm, bottom=15mm}
 
 \setcounter{tocdepth}{3}
 %\sectionfont{\large\upshape\bfseries}
