--- a/src/content/abstract.tex
+++ b/src/content/abstract.tex
@@ -8,8 +8,11 @@
 %----------------------------------------------------------------------------
 \chapter*{Kivonat}\addcontentsline{toc}{chapter}{Kivonat}
 
-Jelen dokumentum egy diplomaterv sablon, amely formai keretet ad a BME Villamosmérnöki és Informatikai Karán végző hallgatók által elkészítendő szakdolgozatnak és diplomatervnek. A sablon használata opcionális. Ez a sablon \LaTeX~alapú, a \emph{TeXLive} \TeX-implementációval és a PDF-\LaTeX~fordítóval működőképes.
+A kritikus rendszerek -mint például a repülőgépek, atomerőművek, vagy vasúti biztosítóberendezések- tervezése során kiemelten fontos, hogy azok bizonyíthatóan megbízhatóan és hibamentesen működjenek. Ennek oka, hogy a hibás működés nemcsak súlyos anyagi károkat okozhat, hanem akár emberéleteket is veszélyeztethet. Ezeknek a szigorú feltételeknek a teljesítésére léteznek tervezési módszertanok, amelyek kiemelt fontosságú részét képezik a különböző verifikációs és validációs (V\&V) technikák. A rendszerek komplexitásának növekedése miatt a hagyományos dokumentumcentrikus módszereket elkezdte felváltani a modellalapú rendszertervezés (Model-based Systems Engineering, MBSE), amely mérnöki modellezési nyelvek használ a rendszerek precíz leírására. Emellett a szakterület-specifikus modellezési nyelveknél már elterjedt a szimulációs technológiák - validációs folyamatokban történő, illetve a fejlesztést segítő - alkalmazása.
 
+A szakirodalomban a modellalapú rendszertervezés és a szimulációs technológiák egyesítésének már számos előnyére rámutattak. Az MBSE területén új lehetőségeket és kihívásokat hoz a megjelenés előtt álló SysML v2 nyelv, amely teljesen új alapokra helyezi a széles körben elterjedt SysML-t. Az újdonságok miatt jelenleg még nincs kiforrott módszertan arra, hogyan érdemes SysML v2 nyelven rendszereket modellezni. Ugyanakkor a nyelv ígéretes funkciókkal rendelkezik, amelyek várhatóan a korábbinál nagyobb mértékben teszik majd lehetővé a szimulációs modellek és technológiák integrálását. Ezt felismerve már javában zajlik a SysPhS névre hallgató szabvány átültetése a SysML v2 nyelvre, ami lehetősé teszi majd, hogy szimulációs modelleket származtassunk a rendszermodellekből.
+
+Jelen dolgozat célja összegyűjteni a legfontosabb aspektusokat a komplex kiberfizikai rendszerek modellezésével és a szimulációalapú analízisek integrálásával kapcsolatban, majd egy ezek alapján kidolgozni egy, a SysML v2 újdonságait kihasználó fejlesztési módszertant. Az eredmények  értékelése céljából bemutatásra kerül egy esettanulmány is, mely során a javasolt módszerek egy kvadkopter magasszintű terveinek kidolgozásán keresztül kerülnek bemutatásra. Az eredmények lehetővé teszik komplex kiberfizikai rendszerek modellezés és analízisét az új SysML v2 nyelv segítségével, illetve szimulációs technológiák illesztését a rendszermodellhez és a fejlesztési folyamatokhoz.
 
 \vfill
 \selectenglish
@@ -20,8 +23,11 @@ Jelen dokumentum egy diplomaterv sablon, amely formai keretet ad a BME Villamosm
 %----------------------------------------------------------------------------
 \chapter*{Abstract}\addcontentsline{toc}{chapter}{Abstract}
 
-This document is a \LaTeX-based skeleton for BSc/MSc~theses of students at the Electrical Engineering and Informatics Faculty, Budapest University of Technology and Economics. The usage of this skeleton is optional. It has been tested with the \emph{TeXLive} \TeX~implementation, and it requires the PDF-\LaTeX~compiler.
+Critical systems –such as airplanes, nuclear power plants, or railway signaling equipment– must be designed to function reliably and without errors in a verifiable manner. The reason for this is that malfunctioning can cause not only severe financial damage but also potentially endanger human lives. To meet these strict conditions, the design is guided by methodologies, including essential verification and validation (V\&V) techniques. Due to the increasing complexity of systems, traditional document-centric methods have started to be replaced by Model-based Systems Engineering (MBSE), which uses engineering modeling languages for the precise description of systems. In addition, the use of simulation technologies – in validation processes and to support development – has already become widespread in domain-specific modeling languages.
 
+The literature has already highlighted numerous advantages of combining model-based systems engineering and simulation technologies. In the MBSE field, new opportunities and challenges are brought by the upcoming SysML v2 language, which is a complete redesign of its widely used predecessor. Due to the new features, there is currently no well-established methodology for modeling systems in SysML v2. However, the language has promising functionalities that are expected to allow for the integration of simulation models and technologies to a greater extent than before. Recognizing this, the process of adapting the SysPhS standard to SysML v2 is already underway, which will enable the derivation of simulation models from system models.
+
+The goal of this paper is to collect the most critical aspects related to the modeling of complex cyber-physical systems and the integration of simulation-based analyses, and then, based on these, to develop a methodology that leverages the innovations of SysML v2. To evaluate the results, a case study will be presented, in which the proposed methods will be demonstrated through the development of high-level designs for a quadcopter. The results will allow for the modeling and analysis of complex cyber-physical systems using the new SysML v2 language, as well as the integration of simulation technologies with system models and development processes.
 
 \vfill
 \cleardoublepage
